## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

berusky2_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

berusky2_data_DATA = \
	berusky2-data.spec\
	berusky2.desktop\
	berusky2.png\
	berusky2.spec\
	berusky3d.ini\
	berusky3d-local.ini

EXTRA_DIST = $(berusky2_data_DATA)
