## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = berusky2

berusky2_SOURCES = \
	kofola/2D_graphic.c\
	kofola/2D_graphic.h\
	kofola/2ddx.cpp\
	kofola/2ddx.h\
	kofola/3D_graphic.c\
	kofola/3D_graphic.h\
	kofola/3D_menus.c\
	kofola/3D_menus.h\
	kofola/3d_math.c\
	kofola/3d_math.h\
	kofola/Apak.c\
	kofola/Apak.h\
	kofola/Apakio.c\
	kofola/ArmAccess.c\
	kofola/ArmAccess.h\
	kofola/Bind.c\
	kofola/Bind.h\
	kofola/Camera.c\
	kofola/Comics.c\
	kofola/Comics.h\
	kofola/Command.c\
	kofola/Command.h\
	kofola/Dda.c\
	kofola/Dda.h\
	kofola/Demo.c\
	kofola/Demo.h\
	kofola/Init.c\
	kofola/Menu.c\
	kofola/Menu.h\
	kofola/Menu2.c\
	kofola/Menu2.h\
	kofola/Object.h\
	kofola/Setup.h\
	kofola/Tools.c\
	kofola/Tools.h\
	kofola/ac3_stream.cpp\
	kofola/ac3_stream.h\
	kofola/adas.h\
	kofola/adas_types.h\
	kofola/al.h\
	kofola/alc.h\
	kofola/alctypes.h\
	kofola/altypes.h\
	kofola/alu.h\
	kofola/alut.h\
	kofola/ambient_sounds.c\
	kofola/ambient_sounds.h\
	kofola/animation.c\
	kofola/animation.h\
	kofola/animend_functions.c\
	kofola/animend_functions.h\
	kofola/apak_types.h\
	kofola/apakdir.c\
	kofola/apakfind.c\
	kofola/apakstream.c\
	kofola/audio_plug-in.c\
	kofola/audio_plug-in.h\
	kofola/camera.h\
	kofola/codec.h\
	kofola/config_types.h\
	kofola/controls.c\
	kofola/controls.h\
	kofola/controls3d.c\
	kofola/controls3d.h\
	kofola/credits.c\
	kofola/credits.h\
	kofola/ddutil.cpp\
	kofola/ddutil.h\
	kofola/dxutil.h\
	kofola/eax.h\
	kofola/eaxac3.h\
	kofola/font.c\
	kofola/font.h\
	kofola/font3d.c\
	kofola/font3d.h\
	kofola/game_init.c\
	kofola/game_init.h\
	kofola/game_logic.c\
	kofola/game_logic.h\
	kofola/game_main.c\
	kofola/game_main.h\
	kofola/grammar.c\
	kofola/grammar.h\
	kofola/init.h\
	kofola/level_environment.h\
	kofola/load_level.c\
	kofola/load_level.h\
	kofola/menu_def.h\
	kofola/menu_script.c\
	kofola/menu_script.h\
	kofola/mss.h\
	kofola/ogg.h\
	kofola/ogg_io.h\
	kofola/ogg_stream.h\
	kofola/os_types.h\
	kofola/profiles.c\
	kofola/profiles.h\
	kofola/secure.h\
	kofola/setup.c\
	kofola/square_cut.c\
	kofola/square_cut.h\
	kofola/trigers.c\
	kofola/trigers.h\
	kofola/volume.c\
	kofola/volume.h\
	kofola/vorbisenc.h\
	kofola/vorbisfile.h\
	kofola/water.c\
	kofola/water.h\
	kofola/zconf.h\
	kofola/zlib.h\
	komat/3d_all.h\
	komat/3d_typy.h\
	komat/3dinterface.c\
	komat/3dinterface.h\
	komat/3dmath.c\
	komat/3dmath.h\
	komat/3dproject.c\
	komat/3dproject.h\
	komat/Berusky3d.c\
	komat/Berusky3d.h\
	komat/Berusky3d_animace.c\
	komat/Berusky3d_animace.h\
	komat/Berusky3d_castice.c\
	komat/Berusky3d_castice.h\
	komat/Berusky3d_castice2.h\
	komat/Berusky3d_ini.c\
	komat/Berusky3d_ini.h\
	komat/Berusky3d_kamery.c\
	komat/Berusky3d_kamery.h\
	komat/Berusky3d_kofola2d.c\
	komat/Berusky3d_kofola2d.h\
	komat/Berusky3d_kofola_interface.c\
	komat/Berusky3d_kofola_interface.h\
	komat/Berusky3d_light.c\
	komat/Berusky3d_light.h\
	komat/Berusky3d_load.c\
	komat/Berusky3d_load.h\
	komat/Berusky3d_render.c\
	komat/Berusky3d_render.h\
	komat/Berusky_universal.h\
	komat/Bmp.c\
	komat/Bmp.h\
	komat/Color.h\
	komat/Dbgwnd.h\
	komat/Ddx.c\
	komat/Ddx.h\
	komat/Di.c\
	komat/Di.h\
	komat/Kdtree.c\
	komat/Kdtree.h\
	komat/Keyframe.c\
	komat/Keyframe.h\
	komat/Load.c\
	komat/Load.h\
	komat/Load_chunks.c\
	komat/Load_chunks.h\
	komat/Load_out.c\
	komat/Load_out.h\
	komat/Mat3d.c\
	komat/Mat3d.h\
	komat/Matrix.c\
	komat/Matrix.h\
	komat/Mss_on.h\
	komat/NvTriStrip.h\
	komat/Objekt_editor.c\
	komat/Objekt_editor_all.h\
	komat/Objekt_editor_animace.c\
	komat/Objekt_editor_animace.h\
	komat/Objekt_editor_edit.c\
	komat/Objekt_editor_edit.h\
	komat/Objekt_editor_interface.c\
	komat/Objekt_editor_interface.h\
	komat/Objekt_editor_light_fog.c\
	komat/Objekt_editor_light_fog.h\
	komat/Objekt_editor_load.c\
	komat/Objekt_editor_load.h\
	komat/Objekt_editor_raytracing.c\
	komat/Objekt_editor_render.c\
	komat/Oe_berusky_editor.c\
	komat/Oe_berusky_editor.h\
	komat/Oe_berusky_editor_load.c\
	komat/Oe_berusky_editor_load.h\
	komat/Oe_import_3ds.c\
	komat/Oe_import_ase.c\
	komat/Oe_import_ase.h\
	komat/Oe_import_ms3d.c\
	komat/Oe_import_ms3d.h\
	komat/Oe_winini.c\
	komat/Oe_winini.h\
	komat/Quat.h\
	komat/Texture.c\
	komat/Texture.h\
	komat/Texture_import.cpp\
	komat/Texture_import.h\
	komat/Tga.c\
	komat/Tga.h\
	komat/Vektor.h\
	komat/Wglext.h\
	komat/Wzakl_typ.h\
	komat/Zconf.h\
	komat/Zlib.h\
	komat/dxtlib.h\
	komat/gglext.c\
	komat/gglext.h\
	komat/glext.h\
	komat/kfile.c\
	komat/kfile.h\
	komat/mmalloc.h\
	komat/mss.h\
	komat/obb.c\
	komat/obb.h\
	komat/objekt_editor.h\
	komat/objekt_editor_raytracing.h\
	komat/objekt_editor_render.h\
	komat/oe_import_3ds.h\
	komat/resource.h\
	komat/strip.cpp\
	komat/strip.h\
	komat/zlib_io.h

berusky2_LDFLAGS = 

berusky2_LDADD = 

