## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -Ikomat -Ikofola

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = berusky2

berusky2_SOURCES = \
	kofola/3D_graphic.c\
	kofola/3D_graphic.h\
	kofola/3D_menus.c\
	kofola/3D_menus.h\
	kofola/3d_math.c\
	kofola/3d_math.h\
	kofola/Apak.c\
	kofola/Apak.h\
	kofola/Apakio.c\
	kofola/Bind.c\
	kofola/Bind.h\
	kofola/Camera.c\
	kofola/Comics.c\
	kofola/Comics.h\
	kofola/Command.c\
	kofola/Command.h\
	kofola/Dda.c\
	kofola/Dda.h\
	kofola/Demo.c\
	kofola/Demo.h\
	kofola/Init.c\
	kofola/Menu.c\
	kofola/Menu.h\
	kofola/Menu2.c\
	kofola/Menu2.h\
	kofola/Object.h\
	kofola/Setup.h\
	kofola/Tools.c\
	kofola/Tools.h\
	kofola/animation.c\
	kofola/animation.h\
	kofola/animend_functions.c\
	kofola/animend_functions.h\
	kofola/apak_types.h\
	kofola/apakdir.c\
	kofola/apakfind.c\
	kofola/apakstream.c\
	kofola/camera.h\
	kofola/codec.h\
	kofola/config_types.h\
	kofola/controls.c\
	kofola/controls.h\
	kofola/controls3d.c\
	kofola/controls3d.h\
	kofola/credits.c\
	kofola/credits.h\
	kofola/font.c\
	kofola/font.h\
	kofola/font3d.c\
	kofola/font3d.h\
	kofola/game_init.c\
	kofola/game_init.h\
	kofola/game_logic.c\
	kofola/game_logic.h\
	kofola/game_main.c\
	kofola/game_main.h\
	kofola/grammar.c\
	kofola/grammar.h\
	kofola/init.h\
	kofola/level_environment.h\
	kofola/load_level.c\
	kofola/load_level.h\
	kofola/menu_def.h\
	kofola/menu_script.c\
	kofola/menu_script.h\
	kofola/profiles.c\
	kofola/profiles.h\
	kofola/secure.h\
	kofola/setup.c\
	kofola/square_cut.c\
	kofola/square_cut.h\
	kofola/trigers.c\
	kofola/trigers.h\
	kofola/volume.c\
	kofola/volume.h\
	kofola/water.c\
	kofola/water.h\
	kofola/zconf.h\
	kofola/zlib.h\
	komat/3d_all.h\
	komat/3d_typy.h\
	komat/3dinterface.c\
	komat/3dinterface.h\
	komat/3dmath.c\
	komat/3dmath.h\
	komat/3dproject.c\
	komat/3dproject.h\
	komat/Berusky3d.c\
	komat/Berusky3d.h\
	komat/Berusky3d_animace.c\
	komat/Berusky3d_animace.h\
	komat/Berusky3d_castice.c\
	komat/Berusky3d_castice.h\
	komat/Berusky3d_castice2.h\
	komat/Berusky3d_ini.c\
	komat/Berusky3d_ini.h\
	komat/Berusky3d_kamery.c\
	komat/Berusky3d_kamery.h\
	komat/Berusky3d_kofola2d.c\
	komat/Berusky3d_kofola2d.h\
	komat/Berusky3d_kofola_interface.c\
	komat/Berusky3d_kofola_interface.h\
	komat/Berusky3d_light.c\
	komat/Berusky3d_light.h\
	komat/Berusky3d_load.c\
	komat/Berusky3d_load.h\
	komat/Berusky3d_render.c\
	komat/Berusky3d_render.h\
	komat/Berusky_universal.h\
	komat/Bmp.c\
	komat/Bmp.h\
	komat/Color.h\
	komat/Dbgwnd.h\
	komat/Ddx.c\
	komat/Ddx.h\
	komat/Di.c\
	komat/Di.h\
	komat/Kdtree.c\
	komat/Kdtree.h\
	komat/Keyframe.c\
	komat/Keyframe.h\
	komat/Load.c\
	komat/Load.h\
	komat/Load_chunks.c\
	komat/Load_chunks.h\
	komat/Load_out.c\
	komat/Load_out.h\
	komat/Mat3d.c\
	komat/Mat3d.h\
	komat/Matrix.c\
	komat/Matrix.h\
	komat/NvTriStrip.h\
	komat/Quat.h\
	komat/Texture.c\
	komat/Texture.h\
	komat/Texture_import.cpp\
	komat/Texture_import.h\
	komat/Tga.c\
	komat/Tga.h\
	komat/Vektor.h\
	komat/Wglext.h\
	komat/Wzakl_typ.h\
	komat/Zconf.h\
	komat/Zlib.h\
	komat/dxtlib.h\
	komat/gglext.c\
	komat/gglext.h\
	komat/glext.h\
	komat/kfile.c\
	komat/kfile.h\
	komat/mmalloc.h\
	komat/mss.h\
	komat/obb.c\
	komat/obb.h\
	komat/strip.cpp\
	komat/strip.h\
	komat/zlib_io.h

berusky2_LDFLAGS = 

berusky2_LDADD = 

